# rs-mono

./: .gitignore  CLAUDE.md  Cargo.toml
.claude/skills/git-workflow/: SKILL.md
.claude/skills/pi-diff/: SKILL.md
apps/coding-agent/: Cargo.toml
apps/coding-agent/examples/: 01_basic.rs  02_multi_turn.rs
apps/coding-agent/src/: lib.rs  main.rs
apps/coding-agent/src/agent/: agent_loop.rs  event.rs  event_stream.rs  executor.rs  mod.rs  types.rs
apps/coding-agent/src/tools/: bash.rs  bash.txt  edit.rs  glob.rs  glob.txt  mod.rs  read.rs  write.rs
apps/coding-agent/tests/: agent_broadcaster_test.rs  bash_test.rs  edit_test.rs  event_handler_test.rs  executor_test.rs  glob_test.rs  read_test.rs  types_test.rs  write_test.rs
crates/ai/: Cargo.toml
crates/ai/docs/: rust_basic.md
crates/ai/examples/: 01_context.rs  02_model.rs  03_messages.rs  04_stream_basic.rs  05_thinking.rs  06_tools.rs  07_provider.rs  test_client_stream.rs
crates/ai/src/: api_registry.rs  client.rs  lib.rs  model_db.rs  models.rs  provider.rs  stream.rs  stream_event.rs  types.rs
crates/ai/src/providers/: kimi.rs  mod.rs
crates/ai/src/utils/: json_parse.rs  mod.rs
docs/coding-agent/: README.md
docs/opencode/: AGENT_LOOP.md  ARCHITECTURE.md
docs/superpowers/plans/: 2026-03-22-streaming-events.md
scripts/: test_kimi_tool.sh
