[package]
name = "coding-agent"
version.workspace = true
edition.workspace = true

[lib]
name = "coding_agent"
path = "src/lib.rs"

[[bin]]
name = "coding-agent"
path = "src/main.rs"

[dependencies]
ai = { path = "../../crates/ai" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = { workspace = true }
uuid = { version = "1", features = ["v4"] }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
base64 = "0.22"
dirs = { workspace = true }
similar = { workspace = true }
glob = "0.3"

[dev-dependencies]
tempfile = "3"