[package]
name = "ai"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
async-trait.workspace = true
tracing.workspace = true
tokio.workspace = true
thiserror.workspace = true
bytes.workspace = true
json-fix.workspace = true
